<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SpellCardLibrary</string>

    <!--作品名-->
    <!--<string name="kouma">東方紅魔郷</string>-->
    <!--<string name="youmu">東方妖々夢</string>-->
    <!--<string name="suimu">東方萃夢想</string>-->
    <!--<string name="eiya">東方永夜抄</string>-->
    <!--<string name="kaei">東方花映塚</string>-->
    <!--<string name="bunka">東方文花帖</string>-->
    <!--<string name="fuzin">東方風神録</string>-->
    <!--<string name="hisou">東方緋想天</string>-->
    <!--<string name="tirei">東方地霊殿</string>-->
    <!--<string name="seiren">東方星蓮船</string>-->
    <!--<string name="ds">ダブルスポイラー</string>-->
    <!--<string name="tensoku">東方非想天則</string>-->
    <!--<string name="daisen">妖精大戦争</string>-->
    <!--<string name="sinrei">東方神霊廟</string>-->
    <!--<string name="sinki">東方心綺楼</string>-->
    <!--<string name="kisin">東方輝針城</string>-->
    <!--<string name="amnjk">弾幕アマノジャク</string>-->

    <string-array name="titles">
        <item>東方紅魔郷</item>
        <item>東方妖々夢</item>
        <item>東方萃夢想</item>
        <item>東方永夜抄</item>
        <item>東方花映塚</item>
        <item>東方文花帖</item>
        <item>東方風神録</item>
        <item>東方緋想天</item>
        <item>東方地霊殿</item>
        <item>東方星蓮船</item>
        <item>ダブルスポイラー</item>
        <item>東方非想天則</item>
        <item>妖精大戦争</item>
        <item>東方神霊廟</item>
        <item>東方心綺楼</item>
        <item>東方輝針城</item>
        <item>弾幕アマノジャク</item>
    </string-array>

    <!--<string name="title_activity_table_kouma">Table_kouma</string>-->
    <!--<string name="title_activity_table_youmu">Table_youmu</string>-->
    <!--<string name="title_activity_table_suimu">Table_suimu</string>-->
    <!--<string name="title_activity_table_eiya">Table_eiya</string>-->
    <!--<string name="title_activity_table_kaei">Table_kaei</string>-->
    <!--<string name="title_activity_table_bunka">Table_bunka</string>-->
    <!--<string name="title_activity_table_fuzin">Table_fuzin</string>-->
    <!--<string name="title_activity_table_hisou">Table_hisou</string>-->
    <!--<string name="title_activity_table_tirei">Table_tirei</string>-->
    <!--<string name="title_activity_table_seiren">Table_seiren</string>-->
    <!--<string name="title_activity_table_tensoku">Table_tensoku</string>-->
    <!--<string name="title_activity_table_ds">Table_ds</string>-->
    <!--<string name="title_activity_table_daisen">Table_daisen</string>-->
    <!--<string name="title_activity_table_sinrei">Table_sinrei</string>-->
    <!--<string name="title_activity_table_sinki">Table_sinki</string>-->
    <!--<string name="title_activity_table_kisin">Table_kisin</string>-->
    <!--<string name="title_activity_table_amnjk">Table_amnjk</string>-->
    <!--<string name="action_settings">Settings</string>-->
    <!--<string name="title_activity_scinfo">SCInfo</string>-->
    <!--<string name="title_activity_base_table">BaseTable</string>-->

    <string name="title_charname">使用キャラ</string>
    <string name="title_workname">作品名</string>
    <string name="title_difficulty">出現難易度</string>
    <string name="title_stage">出現ステージ</string>
    <string name="title_time">制限時間</string>
    <string name="title_maxSCB">SCB最大値</string>
    <string name="title_redSCB">SCB減少値</string>
    <string name="title_activity_character_select">CharacterSelect</string>
    <string name="title_activity_scinfo">詳細情報</string>
    <string name="title_activity_base_table">基盤</string>

    <string name="action_credit">クレジット</string>

    <!--キャラクター名-->
    <string name="reimu">博麗霊夢</string>
    <string name="marisa">霧雨魔理沙</string>

    <string name="no_data">データがありません</string>

</resources>
