<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.spellcardlibrary.app.SCInfo"
    android:orientation="vertical">

    <!--スペルカード名-->

        <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:paddingTop="10sp"
            android:paddingBottom="10sp"/>


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <!--使用キャラ-->
    <TableRow>
        <TextView
            android:id="@+id/charname"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/title_charname"
            android:paddingRight="10sp" />
        <TextView
            android:id="@+id/charnameValue"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="20sp"/>
    </TableRow>

    <!--出現難易度-->
    <TableRow>
        <TextView
            android:id="@+id/difficulty"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/title_difficulty"
            android:singleLine="true"
            android:paddingRight="10sp"/>
        <TextView
            android:id="@+id/difficultyValue"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="20sp"/>
    </TableRow>

    <!--出現ステージ-->
    <TableRow>
        <TextView
            android:id="@+id/stage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/title_stage"
            android:paddingRight="10sp"/>
        <TextView
            android:id="@+id/stageValue"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="20sp"/>
    </TableRow>

    <!--制限時間-->
    <TableRow>
        <TextView
            android:id="@+id/time"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/title_time"
            android:paddingRight="10sp"/>
        <TextView
            android:id="@+id/timeValue"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="20sp"/>
    </TableRow>

    <!--SCB最大値-->
    <TableRow>
        <TextView
            android:id="@+id/maxSCB"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/title_maxSCB"
            android:paddingRight="10sp"/>
        <TextView
            android:id="@+id/maxSCBValue"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="20sp"/>
    </TableRow>

    <!--SCB減少値-->
    <TableRow>
        <TextView
            android:id="@+id/redSCB"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/title_redSCB"
            android:paddingRight="10sp"
            />
        <TextView
            android:id="@+id/redSCBValue"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="20sp"/>
    </TableRow>

    </TableLayout>
</LinearLayout>
